fix logo cutoff, video order

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -13,8 +13,9 @@
   margin: 0 0 0 100px;
   position: absolute;
   top: 25px;
-  width: 400px;
   z-index: 2;
+
+  -webkit-font-smoothing: antialiased;
 }
 
 .header h1 a {
@@ -31,6 +32,12 @@
  * production code, beware of the browser
  * prefixes.
  */
+
+@media (min-width: 1500px) {
+  .header h1 {
+    font-size: 6.5rem;
+  }
+}
 
 @media (max-width: 800px) {
   .header {
